packages/astro/e2e/fixtures/errors/src/pages/vue-runtime-error.astro
---
import VueRuntimeError from '../components/vue/VueRuntimeError.vue';
---

<div>
  <VueRuntimeError />
</div>
